framec_tests/common/tests/negative/test_transition_in_action.frm
system TestSys {
    interface:
        go()

    machine:
        $A {
            go() {
                doWork()
                return
            }
        }

    actions:
        doWork() {
            // Not allowed: transitions in actions
            -> $A
        }
}

